@@ -23,3 +23,4 @@
 19/05/2015 - 0.8 - activate back application close button
                  - make sure MainWindow is visible when triggering stop_all and start_all
                  - handle double click event in system tray icon
+                 - added Tools menu entry and moved check update submenu to Tools menu
